deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
spec:
  type: ClusterIP
  selector:
    app: demo
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
